[package]
name = "indexer"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
log = { version = "0.4.17", features = ["kv_unstable_std"] }
json_env_logger = { version = "0.1", features = ["backtrace"] }
diesel = { version = "2.1.0", features = ["postgres"] }
chrono = "0.4.26"
dotenvy = "0.15"
syrette = "0.4.2"
dotenv = "0.15.0"
