[package]
name = "drip-v2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drip_v2"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
solana-program = "=1.14.17"
pyth-sdk-solana = "0.7.0"
anchor-spl = "0.27.0"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
